--- a/Ejerciciogit.html
+++ b/Ejerciciogit.html
@@ -14,7 +14,7 @@
         <section class="contenido"></section>
     </main>
     <footer>
-        <p>Maquetado en grupo en Academia Geek</p>
+        <p>Maquetado en grupo en <a href="http://adalab.es">adalab</a></p>
     </footer>
 </body>
 </html>
