--- a/Ejerciciogit.html
+++ b/Ejerciciogit.html
@@ -10,7 +10,9 @@
         <h1>Grupo Siempre Juiciosas</h1>
     </header>
     <main>
-        <section class="motivacion"></section>
+        <section class="motivacion">
+            <h2>Frase motivador: WE CAN DO IT !</h2>
+        </section>
         <section class="contenido"></section>
     </main>
     <footer>
