--- a/Ejerciciogit.html
+++ b/Ejerciciogit.html
@@ -11,7 +11,11 @@
     </header>
     <main>
         <section class="motivacion"></section>
+
         <section class="contenido"></section>
+        <h1>ESTA ES LA MOTIVACION DE HOY</h1>
+        <p>cada dia debemos mmotivarnos para
+         seguir adelante, y ser cada dia meejores en lo que hacemos.</p>
     </main>
     <footer>
         <p>Maquetado en grupo en Academia Geek</p>
